# Bishe_LLM_for_genesis

./: .env.example  .gitignore  .gitmodules  CLOUD_README.md  LICENSE  PROJECT_STRUCTURE.md  README.md  cli.py  colab_run.ipynb  pyproject.toml  requirements.txt  sitecustomize.py
PEFT/: README.md  finetune_runner.py  run_finetune.py
application/: README.md  __init__.py  app_common.py  interactive_robot_control.py  local_llm_engine.py  run_action_to_motion.py  run_instruction_to_action.py  run_instruction_to_motion.py  run_interactive_app.py
config/: README.md  pipeline_config.json
configs/: base.yaml  default.yaml  experiments_matrix.yaml
data_prepare/: augment_genesis_franka_dataset_with_api.py  demo_alpaca.json  demo_sharegpt.json  demo_stats.json  generate_genesis_franka_dataset.py  genesis_franka_toolcall_alpaca.json  genesis_franka_toolcall_progress.json  genesis_franka_toolcall_sharegpt.json  genesis_franka_toolcall_stats.json
dataset_check/: README.md  run_augment_dataset.py  run_dataset_calibration.py  run_generate_dataset.py
exams/: test_local_llm.py  test_monitor.py
experiments/: EXPERIMENT_SUMMARY.md
genesis_example/: genesis_tools.py
model/: download_hf_model.py
model_test/: README.md  accuracy_report.json  evaluate_dataset_with_performance.py  evaluate_toolcall_accuracy.py  run_accuracy_eval.py  run_regression_tests.py  test_genesis.py  test_genesis_manager.py
pipeline/: unified_config.py
scripts/: bootstrap_sim_assets.sh  chat_with_gpt.py  export_3b_merged_formats.py  merge_lora_for_speculative.py  run_experiments.py
(+494 files in other folders)
